# agentforge-1-clinical-copilot

./: .gitattributes  .gitignore  CLAUDE.md  README.md
services/copilot-agent/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/copilot-agent/app/: allergy_check.py  authz.py  chat.py  check_drug_interactions.py  config.py  correlation.py  creds_file.py  dashboard.py  dashboard_alerts.py  dashboard_eval_history.py  dashboard_metrics.py  dev_token_bridge.py  extraction.py  feedback.py  introspection.py  launch_binding.py  main.py  ollama_client.py  openemr_auth.py  openemr_client.py  planner.py  prod_client_registration.py  quarantine.py  readiness.py  rendering.py  review_page.py  review_queue.py  trace_store.py  verdict.py  verification.py
services/copilot-agent/app/data/: drug_interactions.db  drug_interactions.py  drug_interactions.sha256  drug_interactions_source.csv  eval_history.json
services/copilot-agent/app/schemas/: __init__.py  common.py  planner.py  tools.py  verification.py
services/copilot-agent/app/tools/: _common.py  allergies.py  labs.py  (+6 more)
services/copilot-agent/scripts/: capacity_run.py
services/copilot-agent/tests/: conftest.py  test_allergy_check.py  test_authz.py  test_capacity_run.py  test_chat_endpoint.py  test_chat_production_factory.py  test_chat_recency_notice.py  test_chat_shell.py  test_chat_shell_browser.py  test_chat_trace_emission.py  test_check_drug_interactions.py  test_correlation.py  test_dashboard_alerts.py  test_dashboard_browser.py  test_dashboard_eval_history.py  test_dashboard_metrics.py  test_dashboard_page.py  test_dev_token_bridge.py  test_drug_interactions_ingest.py  test_extraction.py  test_feedback_endpoint.py  test_forwarded_token.py  test_health.py  test_introspection.py  test_json_log_formatter.py  test_launch_binding.py  test_ollama_client.py  test_openemr_auth.py  test_openemr_client.py  test_planner.py  test_planner_streaming.py  test_quarantine.py  test_readiness_checks.py  test_ready.py  test_reasoning_stream.py  test_rendering.py  test_review_page.py  test_review_queue.py  test_review_queue_browser.py  test_span_emission.py  (+14 more)
(+231 files in other folders)
