[project]
name = "copilot-agent"
version = "0.1.0"
description = "Clinical Co-Pilot FastAPI agent service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "playwright>=1.45",
    "pytest-playwright>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "browser: requires a real browser (Playwright)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
